syntax = "proto3";

package utxorpc.v1alpha.submit;

// Represents a transaction from any supported blockchain.
message AnyChainTx {
  oneof type {
    bytes raw = 1; // Raw transaction data.
  }
}

// Request to submit transactions to the blockchain.
message SubmitTxRequest {
  repeated AnyChainTx tx = 1; // List of transactions to submit.
}

// TODO u5c: new type - https://github.com/utxorpc/spec/pull/163
message TxSubmitResult {
  oneof result {
    bytes ref = 1; // Transaction references.
    string error_message = 2; // The error message
  }
}

// Response containing references to the submitted transactions.
// TODO u5c: changed type - https://github.com/utxorpc/spec/pull/163
message SubmitTxResponse {
  repeated TxSubmitResult results = 1; // List of either transaction references or error messages.
}

// Service definition for submitting transactions and checking their status.
service SubmitService {
  rpc SubmitTx(SubmitTxRequest) returns (SubmitTxResponse); // Submit transactions to the blockchain.
}
